@@ -1,3 +1,9 @@
+2006-08-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: created set_progress_info() (i actually planned
+	  on adding some time remaining stuff, but xfiles is waiting ;) )
+
 2006-08-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/GParted_Core.cc: fixed small issue with lp_partition ->geom
